mongoexpress-service-lnternal.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
