ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: mongo-express.com
      http:
          paths:
            - backend:
                serviceName: mongo-express-service
                servicePort: 8081
